--- a/src/app/pages/storage2/components/pools-dashboard/pools-dashboard.component.html
+++ b/src/app/pages/storage2/components/pools-dashboard/pools-dashboard.component.html
@@ -25,3 +25,5 @@
   class="pool"
   (poolsUpdated)="loadPools()"
 ></ix-dashboard-pool>
+
+<ix-entity-tree-table *ngIf="treeTableConfig.tableData && treeTableConfig.tableData.length > 0" [conf]="treeTableConfig"></ix-entity-tree-table>
